<resources>
    <string name="app_name">HoRiZontDEV</string>
    <string name="nav_home">หน้าหลัก</string>
    <!--TextNavigation-->
    <string name="nav_location">สาขา</string>
    <string name="nav_favorite">รายการโปรด</string>
    <string name="nav_promotion">โปรโมชั่น</string>
    <string name="nav_profile">บัญชี</string>
    <string name="open_drawer">เปิด</string>
    <string name="close_drawer">ปิด</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_login">เข้าสู่ระบบ</string>
    <string name="nav_cart">ตะกร้า</string>
    <string name="nav_store">ร้านค้า</string>
    <string name="nav_inventory">ประวัติการสั่งซื้อ</string>
    <!--TextBtn-->
    <string name="btn_close">ปิด</string>
    <string name="btn_confirm">ยืนยัน</string>
    <string name="btn_addBasket">เพิ่มลงตะกร้า</string>
    <string name="btn_selectItem">กรุณาเลือกจำนวนสินค้า</string>
    <!--TextView-->
    <string name="txt_price">ราคา</string>
    <string name="txt_password">รหัสผ่าน</string>
    <string name="txt_fristname">ชื่อ</string>
    <string name="txt_lastname">นามสกุล</string>
    <string name="txt_address">ที่อยู่</string>
    <string name="txt_phoneOrmail">เบอร์โทร หรือ อีเมล</string>
    <string name="txt_phone">กรอกเบอร์โทร</string>
    <string name="txt_email">อีเมล</string>
    <string name="txt_wel_TH">ยินดีต้อนรับ</string>
    <string name="txt_wel_EN">Welcome</string>
    <string name="txt_forgetpass">ลืมรหัสผ่าน?</string>
    <string name="txt_news">ข่าวสาร</string>
    <string name="txt_descImg_forPromote">* ภาพนี้ใช้สำหรับการโฆษณา</string>

    <!--TextTitle-->
    <string name="title_register">เข้าสู่ระบบ/สมัครสมาชิก</string>

    <string-array name="club">
        <item>=เลือกสาขา=</item>
        <item>สาขาเชียงใหม่</item>
        <item>สาขาข่อนแก่น</item>
        <item>สาขาอุดรธานี</item>
        <item>สาขาอุบลราชธานี</item>
        <item>สาขาสกลนคร</item>
        <item>สาขาสุรินทร์</item>
        <item>สาขาหนองคาย</item>
        <item>สาขาเชียงราย 1</item>
        <item>สาขาบุรีรัมย์</item>
    </string-array>
</resources>
