<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group
     android:checkableBehavior="single">
    <item
        app:showAsAction="collapseActionView"
        style="@style/Text_10dp"
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/nav_home"/>
    <item
        app:showAsAction="collapseActionView"
        style="@style/Text_10dp"
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_action_location"
        android:title="@string/nav_location"/>
    <item
        app:showAsAction="never"
        style="@style/Text_10dp"
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/nav_favorite"/>
    <item
        app:showAsAction="never"
        style="@style/Text_10dp"
        android:id="@+id/nav_promotion"
        android:icon="@drawable/ic_action_promotion"
        android:title="@string/nav_promotion"/>
    <item
        app:showAsAction="never"
        style="@style/Text_10dp"
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/nav_profile"/>

</group>
</menu>