<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout">

    <RelativeLayout
        android:id="@+id/activity_main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tb_home_custom">
        </include>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_below="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewAdPager"
                    android:layout_marginBottom="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </android.support.v4.view.ViewPager>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_below="@+id/viewAdPager"
                    android:id="@+id/sliderDot"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </LinearLayout>
            </RelativeLayout>
            <FrameLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rl"
                android:layout_above="@+id/navigation"
                android:animateLayoutChanges="true">
            </FrameLayout>

        <android.support.design.widget.BottomNavigationView
            style="@style/Text_10dp"
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:itemBackground="@color/colorRed"
            app:itemIconTint="@color/colorWhite"
            app:itemTextColor="@color/colorWhite"
            app:menu="@menu/bottom_nav_menu"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/colorWhite">

        <LinearLayout
            android:id="@+id/layout_menu"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_above="@id/layout_menu"
                android:orientation="vertical"
                android:background="@color/colorRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="10dp"
                    android:src="@drawable/logohor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:tint="@color/colorRed"
                    android:src="@drawable/ic_action_profile"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/txt_nav_profile"
                    style="@style/Text_20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorRed"
                    android:text="@string/nav_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:tint="@color/colorRed"
                    android:src="@drawable/ic_action_busket"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/txt_nav_cart"
                    style="@style/Text_20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorRed"
                    android:text="@string/nav_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:tint="@color/colorRed"
                    android:src="@drawable/ic_action_home"
                    android:layout_width="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/txt_nav_store"
                    style="@style/Text_20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorRed"
                    android:text="@string/nav_store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:background="@color/colorRed"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/txt_version"
                    android:layout_gravity="bottom"
                    style="@style/Text_10dp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="version :"/>
            </LinearLayout>
        </RelativeLayout>
</android.support.v4.widget.DrawerLayout>